Use Let's Encrypt in peer-server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,8 @@ if(HUMBLENET_NATIVE)
 			-DCMAKE_USER_MAKE_RULES_OVERRIDE:FILEPATH=${CMAKE_USER_MAKE_RULES_OVERRIDE}
 			-DCMAKE_USER_MAKE_RULES_OVERRIDE_CXX:FILEPATH=${CMAKE_USER_MAKE_RULES_OVERRIDE_CXX}
 			-DLWS_WITHOUT_TESTAPPS:BOOL=ON
+			-DLWS_WITH_ACME:BOOL=ON
+			-DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
 			${LWS_ZLIB_CONFIG}
 			${LWS_BORING_CONFIG}
 			${LINUX_ARCH_CONFIG}
