--- a/.github/workflows/humblenet-linux.yml
+++ b/.github/workflows/humblenet-linux.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install clang++
       run: |
         sudo apt update
-        sudo apt install -y clang        
+        sudo apt install -y clang libpcap-dev        
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
