--- a/.github/workflows/humblenet-linux.yml
+++ b/.github/workflows/humblenet-linux.yml
@@ -19,10 +19,10 @@ jobs:
         submodules: recursive
         fetch-depth: 0 
 
-    - name: Install clang++
+    - name: Install clang++ and deps
       run: |
         sudo apt update
-        sudo apt install -y clang libpcap-dev        
+        sudo apt install -y clang libpcap-dev libcap2-dev       
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
