--- a/.github/workflows/humblenet-linux.yml
+++ b/.github/workflows/humblenet-linux.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Build peer-server
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target peer-server
 
+    - name: Build ALL
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
     - name: Upload peer-server binary
       uses: actions/upload-artifact@v4
       with:
