Add unregister alias function

--- a/jsapi/CMakeLists.txt
+++ b/jsapi/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(NOT CMAKE_BUILD_TYPE STREQUAL "Release" AND EMSCRIPTEN)
+    message(FATAL_ERROR "Build type must be Release (-DCMAKE_BUILD_TYPE=Release)")
+endif()
+
 add_executable(jsapi
     src/main.cpp
 )
@@ -7,7 +11,7 @@ target_link_options(jsapi PRIVATE
     -sALLOW_MEMORY_GROWTH=0
     -sEXPORTED_FUNCTIONS=['_malloc','_free']
     -sDISABLE_EXCEPTION_CATCHING=0
-    -sASSERTIONS=1
+    -sASSERTIONS=0
     -sMODULARIZE
     -sEXIT_RUNTIME=0
     -sEXPORT_NAME="HumbleNet"
