Track rooms in database

--- a/src/peer-server/CMakeLists.txt
+++ b/src/peer-server/CMakeLists.txt
@@ -4,6 +4,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
 CreateTool(peer-server
 DIRS
 	.
+	"${CMAKE_CURRENT_LIST_DIR}/../../3rdparty/sqlite-3500400"
 FEATURES
 	cxx_auto_type cxx_range_for
 INCLUDES
