--- a/.github/workflows/humblenet-linux.yml
+++ b/.github/workflows/humblenet-linux.yml
@@ -35,10 +35,15 @@ jobs:
 
     - name: Build ALL
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+    
+    - name: Build humblenet_asmjs_amalgamation
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target humblenet_asmjs_amalgamation
 
-    - name: Upload peer-server binary
+    - name: Upload humblenet bundle
       uses: actions/upload-artifact@v4
       with:
-        name: peer-server
-        path: build/peer-server.bin.x86_64
-
+        name: humblenet
+        path: |
+          build/peer-server.bin.x86_64
+          build/humblenet_asmjs_amalgam.cpp
+          src/humblenet/include/*
