Use external poll in LWS (needed for native support)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,6 +185,7 @@ if(HUMBLENET_NATIVE)
 			-DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
 			-DLWS_WITH_BORINGSSL:BOOL=ON
 			-DLWS_WITH_SHARED:BOOL=OFF
+			-DLWS_WITH_EXTERNAL_POLL:BOOL=ON
 			${LWS_ZLIB_CONFIG}
 			${LWS_BORING_CONFIG}
 			${LINUX_ARCH_CONFIG}
