--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,6 +186,7 @@ if(HUMBLENET_NATIVE)
 			-DLWS_WITH_BORINGSSL:BOOL=ON
 			-DLWS_WITH_SHARED:BOOL=OFF
 			-DLWS_WITH_EXTERNAL_POLL:BOOL=ON
+			-DLWS_WITH_HTTP2:BOOL=OFF
 			${LWS_ZLIB_CONFIG}
 			${LWS_BORING_CONFIG}
 			${LINUX_ARCH_CONFIG}
