add support for libopenssl (only for testing purpose)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,17 @@ if(HUMBLENET_NATIVE)
 			-DLWS_BORINGSSL_LIB:STRING=${LWS_BORING_LIBS}
 			-DLWS_BORINGSSL_INCLUDE_DIRS:STRING=${BoringSSL_INCLUDE_DIR}
 		)
+		set(LWS_CONFIG)
+		set(LWS_SSL_LIBS)
+	else()
+		set(LWS_CONFIG
+			-DLWS_WITH_SSL:BOOL=ON
+			-DLWS_WITH_MBEDTLS:BOOL=OFF
+			-DLWS_WITH_BORINGSSL:BOOL=OFF
+			-DLWS_WITH_WOLFSSL:BOOL=OFF
+			-DLWS_WITH_LIBCAP:BOOL=OFF
+		)
+		set(LWS_SSL_LIBS ssl crypto)
 	endif()
 
 	add_subdirectory(3rdparty/webrtc		webrtc)
@@ -183,10 +194,10 @@ if(HUMBLENET_NATIVE)
 			-DLWS_WITHOUT_TESTAPPS:BOOL=ON
 			-DLWS_WITH_ACME:BOOL=ON
 			-DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
-			-DLWS_WITH_BORINGSSL:BOOL=ON
 			-DLWS_WITH_SHARED:BOOL=OFF
 			-DLWS_WITH_EXTERNAL_POLL:BOOL=ON
 			-DLWS_WITH_HTTP2:BOOL=OFF
+			${LWS_CONFIG}
 			${LWS_ZLIB_CONFIG}
 			${LWS_BORING_CONFIG}
 			${LINUX_ARCH_CONFIG}
