--- a/src/peer-server/CMakeLists.txt
+++ b/src/peer-server/CMakeLists.txt
@@ -17,6 +17,7 @@ LINK
 	${CMAKE_THREAD_LIBS_INIT}
 	${LWS_BORING_LIBS}
 	${LWS_BORING_INTERFACE}
+	${LWS_SSL_LIBS}
 PROPERTIES
 	FOLDER HumbleNet/Server
 	CXX_STANDARD 14
