--- a/.github/workflows/humblenet-boringssl-linux.yml
+++ b/.github/workflows/humblenet-boringssl-linux.yml
@@ -1,4 +1,4 @@
-name: humblenet-linux
+name: humblenet-boringssl-linux
 
 on:
   push:
@@ -33,6 +33,9 @@ jobs:
     - name: Build peer-server
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target peer-server
 
+    - name: Build ALL
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+    
     - name: Build humblenet_asmjs_amalgamation
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target humblenet_asmjs_amalgamation
 
